--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
     <div class="container">
         <div id="question-container">
-            <div id="question">Question</div>
-            <div id="timer">Timer:</div>
+            <div id="question">Question: </div>
+            <div id="timer">Timer: </div>
             <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+                <button class="btn" class="answer1">Answer 1</button>
+                <button class="btn" class="answer2">Answer 2</button>
+                <button class="btn" class="answer3"> Answer 3</button>
+                <button class="btn" class="answer4">Answer 4</button>
             </div>
         </div>
-        <div class="controls" class="controls-grid">
-            <button id="highscores-btn" class="highscores-btn btn">High Scores</button>
-            <button id="start-btn" class="start-btn btn">START</button>
-        </div>
+        <button id="highscores-btn" class="highscores-btn btn">High Scores</button>
+        <button id="start-btn" class="start-btn btn">START</button>
     </div>
+    </div>
+    <!--<div id="results">Results</div>-->
     <script src="script.js"></script>
     <script src="questions.js"></script>
 </body>
